attempt 6 at fixing navbar bug on iphone

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -318,7 +318,7 @@ margin-bottom:20px;
 padding: 10px;
 }
 
-#navbutton1, #navbutton2 {
+#navbutton1 img, #navbutton2 img {
 	position: relative;
 	z-index: 10;
 }
